# daedalus

./: .gitignore  agent.py  agent_manager.py  analyse.py  cli.py  logger.py  main.py  model.py  prompt_and_format.py  pyproject.toml  reasoning.py  routes.py  test.py  tools.py
mcp/: mcp_linux_doc.py
past_integrations/: cot.py  react_agent.py
tests/: test_agent.py  test_analyse_node.py  test_reasoning_node.py  test_regression_analyse_node.py  test_regression_reasoning_node.py  test_routes.py
